# patent-chat

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LLM_Prompt_Refine_JP.md  LLM_Prompt_for_Invention_Explanation_Full_JP.md  LLM_Prompt_for_Patent_Application_Drafting_from_Idea.md  README.md  pyproject.toml  sample.md
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: bug.md  feature.md
.streamlit/: config.toml
app/: __init__.py  app.py  auth.py  diff_utils.py  export.py  file_handler.py  llm.py  main.py  spec_builder.py  state.py  storage.py
tests/: test_attachment_model.py  test_file_handler.py  test_gemini_file_handler.py  test_hearing_improvements.py  test_hearing_ui.py  test_llm_with_attachments.py  test_markdown_export_extended.py  test_markdown_export_formatting.py  test_message_cleaning.py  test_office_file_handler.py  test_pdf_export_encoding.py  test_prompt_no_preface.py  test_qa_history_collapsed.py  test_qa_pairing.py  test_question_generation_fallback.py  test_refine_document.py  test_sequential_question_numbering.py  test_spec_output_cleaning.py  test_spec_regeneration.py  test_storage.py  test_title_model_flash.py  test_version_display.py
